# horovod

./: CMakeLists.txt  setup.py
horovod/common/: message.cc
horovod/common/ops/: gloo_operations.cc
horovod/mxnet/: CMakeLists.txt
